package com.auctionuet.server.service;

public class BidService {
}
